@@ -1,3 +1,9 @@
+2005-06-10  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkiconview.c (gtk_icon_view_set_margin): 
+	* gtk/gtkicontheme.c (gtk_icon_info_load_icon): 
+	* gtk/gtkcalendar.c (gtk_calendar_thaw): Doc fixes.
+
 2005-06-09  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/x11/gdkwindow-x11.c: Small markup fixes.
