@@ -5397,7 +5397,7 @@ gtk_icon_view_get_column_spacing (GtkIconView *icon_view)
 }
 
 /**
- * gtk_icon_view_set_marging:
+ * gtk_icon_view_set_margin:
  * @icon_view: a #GtkIconView
  * @spacing: the margin
  * 
